# Qt_QML_Android_LED_Control_H-W

./: CMakeLists.txt  Main.qml  README.md  main.cpp
GpioController/: gpiocontroller.cpp  gpiocontroller.h
gpio-daemon/jni/: Android.mk  Application.mk  gpio_daemon.c  gpio_mmio.c  gpio_mmio.h  shift_register.c
gpio-daemon/libs/arm64-v8a/: gpiod
